add color generator to project file to fixed bug import from npm library, add functionality to change css variable on runtime

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,6 +7,9 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --color-primary: 255 115 179;
+  }
   html {
     font-family: 'Roboto', system-ui, sans-serif;
   }
