--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@import './md/styles/tokens.css';
+@import './md/styles/theme.light.css' (prefers-color-scheme: light);
+@import './md/styles/theme.dark.css' (prefers-color-scheme: dark);
 @import './md/components/button.css';
 
 @tailwind base;
